--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 on:
   push:
     paths-ignore:
-      - 'README.md'
-      - 'changelog.md'
-      - 'CommunityContributions/**'
+      - "README.md"
+      - "changelog.md"
+      - "CommunityContributions/**"
     branches:
       - master
 
@@ -14,8 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, macos-latest]
-        # os: [windows-latest, ubuntu-latest, macos-latest]
+        os: [windows-latest, ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v1
       - name: Run Continuous Integration
